--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Reviews</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img src="/multimedia/logovs.png" alt="Logo" width="250px">
+                <img src="../multimedia/logovs.png" alt="Logo" width="250px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -70,7 +70,7 @@
                     <div class="reviews-news-container">
                         <a href="#">
                             <div class="reviews-news-preview">
-                                <img src="/multimedia/ryzen.webp" alt="Imagen de la noticia 1">
+                                <img src="../multimedia/ryzen.webp" alt="Imagen de la noticia 1">
                                 <div class="reviews-news-info">
                                     <h2>AMD Ryzen 7 7800X3D: tu próxima CPU para juegos</h2>
                                     <p>Por TOM WARREN / @tomwarren</p>
@@ -82,7 +82,7 @@
                     <div class="reviews-news-container">
                         <a href="#">
                             <div class="reviews-news-preview">
-                                <img src="/multimedia/bose.webp" alt="Imagen de la noticia 2">
+                                <img src="../multimedia/bose.webp" alt="Imagen de la noticia 2">
                                 <div class="reviews-news-info">
                                     <h2>Los mejores auriculares inalámbricos para comprar ahora mismo</h2>
                                     <p>Por CHRIS WELCH / @chriswelch</p>
@@ -94,7 +94,7 @@
                     <div class="reviews-news-container">
                         <a href="#">
                             <div class="reviews-news-preview">
-                                <img src="/multimedia/sony.png" alt="Imagen de la noticia 3">
+                                <img src="../multimedia/sony.png" alt="Imagen de la noticia 3">
                                 <div class="reviews-news-info">
                                     <h2>La nueva cámara ZV-E1 de Sony está diseñada para ayudar a tus vlogs a absorber menos</h2>
                                     <p>Por ANTONIO G. DI BENEDETTO / @superantonio64</p>
