--- a/pages/tech.html
+++ b/pages/tech.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tech</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img src="/multimedia/logovs.png" alt="Logo" width="250px">
+                <img src="../multimedia/logovs.png" alt="Logo" width="250px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -71,7 +71,7 @@
 <div class="news-container">
     <a href="noticia1.html">
     <div class="news-preview">
-        <img src="/multimedia/rivian.webp" alt="Rivian, camioneta">
+        <img src="../multimedia/rivian.webp" alt="Rivian, camioneta">
         <div class="news-info">
         <h2>El nuevo tren motriz 'Performance' de Rivian permite a los titulares de reservas R1T mantener su gran batería
         </h2>
@@ -85,7 +85,7 @@
 <div class="news-container">
     <a href="noticia2.html">
     <div class="news-preview">
-        <img src="/multimedia/magsafe.webp" alt="Cargador de celular">
+        <img src="../multimedia/magsafe.webp" alt="Cargador de celular">
         <div class="news-info">
         <h2>El cargador MagSafe 2 en 1 de Belkin ha alcanzado un nuevo precio mínimo histórico
         </h2>
@@ -99,7 +99,7 @@
 <div class="news-container">
     <a href="noticia3.html">
     <div class="news-preview">
-        <img src="/multimedia/parques.webp" alt="Imagen de la noticia 3">
+        <img src="../multimedia/parques.webp" alt="Imagen de la noticia 3">
         <div class="news-info">
         <h2>Finalmente, es más fácil navegar por los parques nacionales usando Google Maps
         </h2>
